# fp-homework

./: README.md
hw1/: README.md  hw1.cabal
hw1/src/Block1/: Task1.hs  Task2.hs  Task3.hs
hw1/src/Block2/: Task1.hs  Task2.hs
hw1/src/Block3/: Task1.hs  Task2.hs
hw1/test/Block1/: Task1Spec.hs  Task2Spec.hs  Task3Spec.hs
hw1/test/Block2/: Task1Spec.hs  Task2Spec.hs
hw1/test/Block3/: Task1Spec.hs  Task2Spec.hs
hw2/: README.md  hw2.cabal
hw2/src/Block1/: Task1.hs  Task2.hs  Task3.hs
hw2/src/Block2/: Task1.hs  Task2.hs
hw2/src/Block3/: Task1.hs  Task2.hs  Task3.hs  Task4.hs
hw2/test/Block1/: Task1Spec.hs
hw2/test/Block2/: Task1Spec.hs
hw2/test/Block3/: Task1Spec.hs  Task2Spec.hs  Task3Spec.hs  Task4Spec.hs
hw3/: hw3.cabal
hw3/app/: Main.hs
hw3/src/: FSActions.hs  Parser.hs  PureFS.hs  RealFS.hs
hw3/test/: Main.hs
hw4/: hw4.cabal
hw4/benchmark/: Main.hs  Task1Bench.hs  Task2Bench.hs  Task3Bench.hs
hw4/src/Task1/: Lazy.hs  Strict.hs
hw4/src/Task2/: MonteCarlo.hs
hw4/src/Task3/: ConcurrentHashTable.hs  ConcurrentHashTableUtils.hs
hw4/src/Task4/: HalyavaScript.hs  HalyavaScriptSamples.hs
hw4/src/Task5/: HS2JS.hs
hw4/src/Task6/: FSLenses.hs
hw4/src/Task7/: FSTraversal.hs
hw4/src/Task8/: Comonad19.hs  Grid.hs  ListZipper.hs
hw4/test/: Task3Spec.hs  Task5Spec.hs
