name:                hw2
version:             0.1.0.0
synopsis:            Synopsis for task 2
description:         Task 2 for FP ITMO course

homepage:            https://github.com//fp-homework/tree/master/hw2#readme
license:             MIT
license-file:        LICENSE
author:              Boris Shaposhnikov
maintainer:          bshaposhnikov01@gmail.com
copyright:           2020 Boris Shaposhnikov

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:    src
  exposed-modules:   Block1.Task1, Block1.Task2, Block1.Task3,
                     Block2.Task1, Block2.Task2,
                     Block3.Task1, Block3.Task2, Block3.Task3, Block3.Task4
  ghc-options:       -Wall
  build-depends:     base >= 4.9 && < 5,
                     mtl
  default-language:  Haskell2010

test-suite hw1-test
  type:              exitcode-stdio-1.0
  hs-source-dirs:    test
  other-modules:     Block1.Task1Spec,
                     Block2.Task1Spec,
                     Block3.Task1Spec, Block3.Task2Spec, Block3.Task3Spec, Block3.Task4Spec
  main-is:           Spec.hs
  build-depends:     base >= 4.9 && < 5,
                     QuickCheck >= 2.13 && < 2.14,
                     hw2,
                     hspec
  ghc-options:       -threaded -rtsopts -with-rtsopts=-N
  default-language:  Haskell2010