name:                hw3
version:             0.1.0.0
synopsis:            Synopsis for task 3
description:         Task 3 for FP ITMO course

homepage:            https://github.com//fp-homework/tree/master/hw3#readme
license:             MIT
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2020 Author name here

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     Parser, FSActions, RealFS, PureFS
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
                     , directory >= 1.3 && < 1.4
                     , extra
                     , filepath >= 1.4 && < 1.5
                     , mtl
                     , optparse-applicative >= 0.15 && < 0.16
                     , split
                     , text >= 1.2 && < 1.3
  default-language:    Haskell2010

executable hw3
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hw3
                     , mtl
                     , optparse-applicative >= 0.15 && < 0.16
  default-language:    Haskell2010

test-suite hw3-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base
                     , hspec >= 2.7 && < 2.8
                     , hw3
                     , mtl
                     , text >= 1.2 && < 1.3
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
