name:                hw4
version:             0.1.0.0
synopsis:            Synopsis for task 4
description:         Task 4 for FP ITMO course

homepage:            https://github.com//fp-homework/tree/master/hw4#readme
license:             MIT
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2020 Author name here

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     Task1.Strict, Task1.Lazy
                     , Task2.MonteCarlo
                     , Task3.ConcurrentHashTable, Task3.ConcurrentHashTableUtils
                     , Task4.HalyavaScript, Task4.HalyavaScriptSamples
                     , Task5.HS2JS
                     , Task6.FSLenses
                     , Task7.FSTraversal
                     , Task8.ListZipper, Task8.Grid, Task8.Comonad19
  ghc-options:         -Wall
  build-depends:       async >= 2.1.1
                     , base >= 4.9 && < 5
                     , comonad
                     , directory
                     , filepath
                     , hashable
                     , microlens
                     , monad-par
                     , monad-par-extras
                     , mtl
                     , parallel
                     , profunctors
                     , random
                     , stm
                     , vector
  default-language:    Haskell2010

test-suite hw4-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:       Task3Spec
                     , Task5Spec
  main-is:             Spec.hs
  build-depends:       async
                     , base
                     , hspec
                     , hw4
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N4
  default-language:    Haskell2010

benchmark hw4-benchmark
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  other-modules:       Task1Bench
                     , Task2Bench
                     , Task3Bench
  main-is:             Main.hs
  build-depends:       async
                     , base
                     , criterion
                     , extra
                     , hw4
  ghc-options:         -Wall -Werror -threaded -rtsopts "-with-rtsopts=-N4 -s"
  default-language:    Haskell2010
